const MENU_PRODUCTS = [
  {
    id: 1,
    name: "Pizza Taraneasca",
    subtitle: "1+1 Gratis la alegere",
    description: "500g",
    price: 30,
    image: images.pizzaDemo,
    categoryId: 1,
  },
  {
    id: 2,
    name: "Pizza Margherita",
    subtitle: "1+1 Gratis la alegere",
    description: "500g",
    price: 40,
    image: images.pizzaDemo,
    categoryId: 1,
  },
  {
    id: 3,
    name: "Pizza Quattro Stagioni",
    subtitle: "1+1 Gratis la alegere",
    description: "500g",
    price: 50,
    image: images.pizzaDemo,
    categoryId: 2,
  },
  {
    id: 4,
    name: "Pizza Capriciosa",
    subtitle: "1+1 Gratis la alegere",
    description: "500g",
    price: 60,
    image: images.pizzaDemo,
    categoryId: 2,
  },
  {
    id: 5,
    name: "Pizza Quattro Formaggi",
    subtitle: "1+1 Gratis la alegere",
    description: "500g",
    price: 70,
    image: images.pizzaDemo,
    categoryId: 3,
  },
];

const MENU_CATEGORIES = [
  {
    id: 1,
    name: "Cele mai vândute",
  },
  {
    id: 2,
    name: "Pizza 1+1 combo",
  },
  {
    id: 3,
    name: "Pizza 30cm",
  },
  {
    id: 4,
    name: "Fă-ți singur pizza",
  },
  {
    id: 5,
    name: "Băuturi non-alcoolice",
  },
];
