...
      }}
    >
      {/* <Tabs.Screen name="index" options={{ href: null }}></Tabs.Screen> */}
      <Tabs.Screen
        name="menu"
        options={{
          title: "Meniu",
          tabBarIcon: () => (
            <HomeIconSvg
              stroke={svgColors.stroke}
              fillPrimary={svgColors.fillPrimary}
              fillSecondary={svgColors.fillSecondary}
            />
          ),
        }}
      />
      <Tabs.Screen
        name="cart"
        options={{
          title: "Coș",
          tabBarIcon: () => (
            <CartIconSvg
              stroke={svgColors.stroke}
              fillPrimary={svgColors.fillPrimary}
              fillSecondary={svgColors.fillSecondary}
            />
...
