# appId: "com.pizzeriaq"
appId: host.exp.exponent
---
- launchApp
- assertVisible: "Comanda minimă este de 40 RON"
- assertVisible: "Meniu"
- assertVisible: "Coș"
- assertVisible: "Caută ce îți dorești"
- assertVisible: "Pizza Capriciosa"
- assertVisible: "Informații"
- tapOn: "Coș"
- assertVisible: "Comanda mea"
- tapOn: "Meniu"
- tapOn: { id: "info-button-capriciosa" }
- assertVisible: "Pizza Capriciosa"
- assertVisible: "Prima Pizza cu Margine Umplută cu Brânză Ricotta?"
- back
- assertVisible: "Cele mai vândute"
